translation-tool/inputs/source_meta/objects/FAP_Usage_Notification__c.object
<CustomObject>
    <description>Only one contact shall be notified.
DI shall sync up this object from DMN/Tools to SFDC.</description>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes_Actual__c</fullName>
        <label>Anytime Bytes Actual (Bytes/Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes__c</fullName>
        <label>Anytime Bytes (Bytes/Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes_Actual__c</fullName>
        <label>Bonus Bytes Actual(2am-8am)(Bytes/Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes__c</fullName>
        <label>Bonus Bytes (2am - 8am) (Bytes/Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_RP_Contact_Name__c</fullName>
        <formula>Contact__r.FirstName+&apos; &apos;+Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DI Logic: Use SFDC_ACCOUNT_LOOKUP.SFDC_ID (highlighted in above row) to do salesforce lookup on ACR with filter IsPrimary=True. Basically, the location can have multiple contacts in ACR but we need the contact who is primary for that location account. If no match is found, error out the record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notification</relationshipLabel>
        <relationshipName>FAP_Usage_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Occurred_Date_Time__c</fullName>
        <description>When Transport Service reached usage Threshold.</description>
        <label>Event Occurred Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notification</relationshipLabel>
        <relationshipName>FAP_Usage_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>On_premise_Staging_DB_ID__c</fullName>
        <externalId>true</externalId>
        <label>On-premise Staging DB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAN__c</fullName>
        <label>SAN</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Bandwidth__c</fullName>
        <label>Token Bandwidth (Bytes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_Service_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transport Service Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Asset.HNS_Product__r.Product_Grouping_Name__c</field>
                <operation>equals</operation>
                <value>Service</value>
            </filterItems>
            <filterItems>
                <field>Asset.HNS_Product__r.Product_Grouping_Name__c</field>
                <operation>equals</operation>
                <value>Satellite Broadband</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Notification</relationshipLabel>
        <relationshipName>FAP_Usage_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usage_Threshold__c</fullName>
        <label>Usage Threshold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Notification</label>
    <nameField>
        <displayFormat>ComPref-{000000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>